--- a/emotion_clustering.ipynb
+++ b/emotion_clustering.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "71cc7020",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'base' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cluster import *\n",
     "from sklearn import metrics\n",
@@ -25,6 +36,11 @@
    "source": [
     "embs = []\n",
     "wavnames = []\n",
+    "import pathlib\n",
+    "traintxt = \"filelists/val.txt\"\n",
+    "with open(traintxt) as f:\n",
+    "    rootpath = f.readlines()[0].split('|')[0]\n",
+    "    rootpath = pathlib.Path(rootpath).parent\n",
     "speaker_wav_root_path = \"dataset/nene\"\n",
     "for idx, wavname in enumerate(os.listdir(speaker_wav_root_path)):\n",
     "    if wavname.endswith(\".wav\"):\n",
@@ -390,7 +406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -404,7 +420,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a04f5d07b0747026a8fbcdf50b9443318e69b1b8bd6247d88bfadb4789282972"
+   }
   }
  },
  "nbformat": 4,
